# ifix-ios

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
dev/: mock_device.py
src/ifix_ios/: __main__.py  app.py  ifix_ios.tcss  tui_app.py
src/ifix_ios/core/: detector.py  firmware.py  guide_agent.py  installer.py  restore.py
tests/: test_detector.py  test_guide_agent.py  test_restore.py  test_stress.py
