[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "ifix-ios"
version = "0.1.0"
description = "Terminal-based iOS device recovery tool for Linux"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [
    {name = "ifix-ios contributors"},
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "textual>=8.0",
    "pyusb>=1.2",
]

[project.scripts]
ifix-ios = "ifix_ios.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[tool.pytest.ini_options]
markers = [
    "stress: stress/load tests (slower, exercise edge cases)",
    "integration: tests that need real device or system deps",
]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:usb.*:",
]
